--- a/libsexp/build.config
+++ b/libsexp/build.config
@@ -43,7 +43,7 @@ endef
 #
 # Note that this list is only for C files.
 MAIN_PROGRAM_CSOURCEFILES=\
-   token_test\
+   test_sexp\
 
 # ######################################################################
 # Set the main (executable) source files. These are all the source files
@@ -70,7 +70,7 @@ MAIN_PROGRAM_CPPSOURCEFILES=\
 #
 # Note that this list is only for C files.
 LIBRARY_OBJECT_CSOURCEFILES=\
-   token\
+   sexp\
 
 # ######################################################################
 # Set each of the source files that must be built. These are all those
@@ -97,7 +97,7 @@ LIBRARY_OBJECT_CPPSOURCEFILES=\
 # previous settings, for this setting you must specify the path to the
 # headers (relative to this directory).
 HEADERS=\
-   src/token.h\
+   src/sexp.h\
 
 
 # ######################################################################
@@ -148,7 +148,6 @@ LIBRARY_FILES=\
 # Note that this does not override the existing flags, it only adds to
 # them
 EXTRA_COMPILER_FLAGS=\
-   -DNAME=Value\
    -W -Wall -Wextra\
    -Wdouble-promotion\
    -Wconversion\
